--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Work Experience"
     url: /cv/
   - title: "Projects"
-    url: /projects/
+    url: /posts/
   - title: "Publication"
     url: /publications/
   - title: "Talk"
